--- a/static/regression/regression8.html
+++ b/static/regression/regression8.html
@@ -17,7 +17,7 @@
 class: center, middle, inverse, title-slide
 
 # STA 506 2.0 Linear Regression Analysis
-## Lecture 9-i: Confidence Intervals in Multiple Regression
+## Lecture 10: Confidence Intervals in Multiple Regression
 ### Dr Thiyanga S. Talagala
 ### 2020-10-31
 
