--- a/static/regression/regression9.html
+++ b/static/regression/regression9.html
@@ -42,7 +42,7 @@ In this section we are going to learn methods and procedures for building regres
 
 - Transform `\(Y\)`
 
-- Transformations on both `\(X\)` variable(s) or `\(Y\)`.
+- Transformations on both `\(X\)` variable(s) and `\(Y\)`.
 
 
 
@@ -477,7 +477,7 @@ Conclusion: The variable `years` contributes significantly to the model.
 
 ### New fitted regression model
 
-`$$log(\hat{Y}) = 10.48 + 0.079X$$`
+`$$\hat{log(Y)} = 10.48 + 0.079X$$`
 
 Convert to original scale
 
@@ -504,7 +504,7 @@ We see that for every one additional year of experience, average (median) salary
 
 ## Interpretation of slope
 
-`$$log(\hat{Y}) = \hat{\beta_0} + \hat{\beta_1}x$$`
+`$$\hat{log(Y)} = \hat{\beta_0} + \hat{\beta_1}x$$`
 
 ### Interpretation of `\(\hat{\beta_0}\)`
 
