--- a/public/regression/regression9.html
+++ b/public/regression/regression9.html
@@ -523,7 +523,7 @@ https://www2.stat.duke.edu/courses/Spring20/sta210.001/slides/lec-slides/09-tran
 
 ## Confidence interval for `\(\beta_j\)`
 
-The confidence interval for the coefficient of `\(x\)` describing its relationship with `\(log(Y)\)` is:
+The confidence interval for the coefficient of `\(x\)` describing its relationship with `\(Y\)` is:
 
 - Confidence intervals `\(\beta_0\)`
 
@@ -548,6 +548,9 @@ years        0.07336341  0.08439611
 ---
 
 ## Confidence interval for `\(\beta_j\)` - backtransform
+
+
+The confidence interval for the coefficient of `\(x\)` describing its relationship with `\(log(Y)\)` is:
 
 - Confidence intervals `\(\beta_0\)`
 
