--- a/public/regression/regression10.html
+++ b/public/regression/regression10.html
@@ -277,7 +277,7 @@ Green line: for all black point (without red point).
 
 ## Assessing leverage
 
-**Hat value:** Helps  to identify extreme `\(X\)` values.
+**Hat (leverages) value:** Helps  to identify extreme `\(X\)` values.
 
 **In simple linear regression**
 
@@ -330,7 +330,7 @@ Y_{n}
 
 Hat matrix diagonal is a standardized measure of the distance of the `\(i\)`th observation from the center (or centroid) of the `\(x-\)`space.
 
-The leverage value `\(h_{ii}\)` does not depend on the response `\(Y_i\)`.
+The leverage (hat) value `\(h_{ii}\)` does not depend on the response `\(Y_i\)`.
 ---
 
 ## Assessing leverage: Example
@@ -446,7 +446,7 @@ This cut off does not apply `\(\frac{2p}{n} &gt; 1\)`.
 
 ]
 
-- Influence - measures how much impact a point has on the regression mode
+- Influence - measures how much impact a point has on the regression model
 
 ---
 
