--- a/static/regression/regression10.html
+++ b/static/regression/regression10.html
@@ -431,7 +431,7 @@ This cut off does not apply `\(\frac{2p}{n} &gt; 1\)`.
 
 .pull-left[
 
-**All points**
+**All points (red)**
 
 ![](regression10_files/figure-html/unnamed-chunk-18-1.png)&lt;!-- --&gt;
 
@@ -439,7 +439,7 @@ This cut off does not apply `\(\frac{2p}{n} &gt; 1\)`.
 
 .pull-right[
 
-**Only black points**
+**Only black points (green)**
 
 ![](regression10_files/figure-html/unnamed-chunk-19-1.png)&lt;!-- --&gt;
 
