--- a/public/regression/regression10.html
+++ b/public/regression/regression10.html
@@ -553,7 +553,7 @@ Remember that leverage alone does not mean a point exerts high influence, but it
 
 - Should influential points ever be discarded? If there is a recording error, measurement error, or if the sample point is invalid or not part of the population that was intended to be sampled, then deleting the point is appropriate. 
 
-- The field of **robust statistics** is concerned with more advanced methods of dealing with influential outliers. For e.g.: **down weight** observations in proportional to residual magnitude or influence. Then highly influential observations will receive less weight that they would in a least-squares fit. 
+- The field of **robust statistics** is concerned with more advanced methods of dealing with influential outliers. For e.g.: **down weight** observations in proportional to residual magnitude or influence. Then highly influential observations will receive less weight than they would in a least-squares fit. 
 e.g: Robust regression 
 
 &lt;!--The field of robust statistics is concerned with more sophisticated ways of dealing with outliers--&gt;
