--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -77,6 +77,9 @@
 <li>📚 <a href="/regression/regression9.html">Transformations to Correct Model Inadequacies</a></li>
 <li>📚 <a href="/regression/regression10.html">Identifying Outliers and Influential Cases</a></li>
 <li>📚 <a href="/regression/regression11.html">Indicator Variables</a></li>
+<li>📚 <a href="/regression/regression12.pdf">Indicator Variables (cont) and Variable Selection</a></li>
+<li><a href="/regression/real-estate.csv">real-estate data</a>
+source: <a href="http://www.stat.cmu.edu/~cshalizi/mreg/15/hw/08/real-estate.csv">http://www.stat.cmu.edu/~cshalizi/mreg/15/hw/08/real-estate.csv</a></li>
 </ol>
 
     </div>
