--- a/public/reg2020/index.html
+++ b/public/reg2020/index.html
@@ -83,6 +83,7 @@ source: <a href="http://www.stat.cmu.edu/~cshalizi/mreg/15/hw/08/real-estate.csv
 <li><a href="/regression/variableSelectionproblem.pdf">real-estate questions</a></li>
 <li><a href="/regression/regression13.pdf">Multicollinearity</a></li>
 <li><a href="/regression/multicollinearity_questions.pdf">Multicollinearity</a></li>
+<li><a href="/regression/regression14.pdf">Bootstrap for Regression</a></li>
 </ol>
 
     </div>
